﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.12.0.26) stable; urgency=low

  * osparser: more log_prog in folderlink and getstring
  * osparser: reporterror: catch unknown origin and exceptions ; references #3655
  * osparser: doAktionen: endif: catch exception in log message ; references #3655
  * osparser: execDosBatch: log8 temp file content
  * osparser: executeWith: log8 temp file content
  * osparser: execPowershellCall: log executing ; fixes #3621
  * osparser: doAktionen: registry: Ignoring parameter /32bit for /AllNTUserdats. ; fixes #3643
  * osjson: jsonAsArrayToStringList: "[true]" now results to "true" ; fixes #3627
  * oswebservice: createSocket: log openssl version
  * osfunclin: getLinuxDistroType: read /etc/os-release  ; fixes #3651
  * osparserhelper: GetOuterFunctionOrExp
  * OsDefinedFunction.parseCallParameter: handle functions as parameter ; fixes #3623
  * osparser: registerSectionOrigins: fix origin for external sub sections
  * osparser: registry: new parameter /AllUsrClassDats
       new function doRegistryAllUsrClassDats ; fix from Terry Strooband (thank you)

-- Detlef Oertel <d.oertel@uib.de>  Tue, 28 Aug 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.25) stable; urgency=low

  * osconf: readConfigFromService: more debug and try-except with
  * oswebservice: function isConnected2(loglist : TStringlist): boolean;

-- Detlef Oertel <d.oertel@uib.de>  Tue, 17 Jul 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.24) stable; urgency=low

  * osconf: readConfigFromService: more debug and try-except
  * update indy 5455 to 5464

-- Detlef Oertel <d.oertel@uib.de>  Mon, 16 Jul 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.23) stable; urgency=low

  * switch High DPI support off for Win7 (did not work correctly)
